--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -60,6 +60,7 @@ template {
   display: none;
 }
 a {
+  color: #000;
   background: transparent;
 }
 a:active,
@@ -76,7 +77,7 @@ strong {
 dfn {
   font-style: italic;
 }
-h1 {
+h4 {
   position: absolute; top: 10px; right: 10px;
   margin: .67em 0;
   font-size: 2em;
@@ -215,7 +216,7 @@ th {
   }
   a,
   a:visited {
-    text-decoration: underline;
+    text-decoration: none;
   }
   a[href]:after {
     content: " (" attr(href) ")";
@@ -929,7 +930,7 @@ textarea {
   line-height: inherit;
 }
 a {
-  color: #428bca;
+  color: white;
   text-decoration: none;
 }
 a:hover,
@@ -1018,6 +1019,8 @@ h6,
 .h4,
 .h5,
 .h6 {
+  font-family: 'Lobster Two', cursive;
+  color: lightgrey;
   font-family: inherit
   font-weight: 500;
   line-height: 1.1;
