--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -24,7 +24,7 @@ body {
 .video-container object,
 .video-container embed {
     position: absolute;
-    top: 0;
+    top: 50px;
     left: 0;
     width: 100%;
     height: 100%;
@@ -1004,10 +1004,7 @@ hr {
   overflow: visible;
   clip: auto;
 }
-h1 {
-  font-family: 'Lobster Two', cursive;
-  color: lightgrey;
-}
+h1,
 h2,
 h3,
 h4,
@@ -1102,7 +1099,7 @@ h6 .small,
 }
 h1,
 .h1 {
-  font-size: 60px;
+  font-size: 200px;
 }
 h2,
 .h2 {
@@ -3919,14 +3916,15 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar-brand {
   float: left;
-  height: 50px;
+  height: 25px;
   padding: 15px 15px;
-  font-size: 18px;
+  font-size: 16px;
   line-height: 20px;
 }
 .navbar-brand:hover,
 .navbar-brand:focus {
   text-decoration: none;
+  background-image:url('binding_dark.png');
 }
 @media (min-width: 768px) {
   .navbar > .container .navbar-brand,
@@ -3969,6 +3967,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-nav > li > a {
   padding-top: 10px;
   padding-bottom: 10px;
+  padding-right: 50px;
+  padding-left: 50px;
   line-height: 20px;
 }
 @media (max-width: 767px) {
@@ -4132,7 +4132,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-default {
-  background-color: #f8f8f8;
+  background-image:url('binding_dark.png');
+  background-color: #000000
   border-color: #e7e7e7;
 }
 .navbar-default .navbar-brand {
