--- a/css/scrolling.css
+++ b/css/scrolling.css
@@ -1,77 +1,72 @@
 /* *********************************
            Variables
   ********************************** */
-$navbar-height: 50px;
-$big-logo-padding: 15px; // adjust these 2 values
-$small-logo-padding: 2px; // of bottom padding to look nice
-
-
+/*// adjust these 2 values*/
+/*// of bottom padding to look nice*/
 /* *********************************
    Some Style Overrides on Bootstrap
   ********************************** */
 .navbar-inverse {
-   background: rgba(62,195,246,0);
-  border-bottom: none;
-}
+  background: rgba(62, 195, 246, 0);
+  border-bottom: none; }
+
 .navbar-inverse .navbar-toggle {
   border: 1px solid #333;
-  border-color: rgba(255,255,255,0.7);
-}
+  border-color: rgba(255, 255, 255, 0.7); }
 
 .navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
-   border-color: transparent;
+  border-color: transparent; }
   @media (max-width: 767px) {
-    background: rgba(255,255,255,0.75);
-  }
-}
+    .navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
+      background: rgba(255, 255, 255, 0.75); } }
+
 .navbar-inverse .navbar-nav > li > a {
-color: black;
-  
+  color: black; }
 
-}
 .navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus {
-color: #22F;
-
-}
-ul.nav {
-}
+  color: #22F; }
 
 /* *********************************
            Toolbar Logo
   ********************************** */
 .small-logo-container {
-    padding-top: $navbar-height;
-    height: $navbar-height;
-    overflow: hidden;
-    position: absolute;
-  }
+  padding-top: 50px;
+  height: 50px;
+  overflow: hidden;
+  position: absolute; }
 
 .small-logo {
-  color: white;
+  color: black;
   font-size: 2.5em;
-  padding-bottom: $small-logo-padding;
-}
+  padding-bottom: 2px; }
 
 /* *********************************
            Big Logo
   ********************************** */
 .big-logo-row {
-  background: gold;
-  
-  .big-logo-container {
-    padding-top: $navbar-height;
-  }
-  
-  h1 {
+  background: gold; }
+  .big-logo-row .big-logo-container {
+    padding-top: 50px; }
+  .big-logo-row h1 {
     font-size: 4em;
-    margin:0;
-    padding:0 0 $big-logo-padding 0;
-    
-    @media (min-width: 400px) { font-size: 4.5em; }
-    @media (min-width: 440px) { font-size: 5.5em; }
-    @media (min-width: 500px) { font-size: 6.5em; }
-    @media (min-width: 630px) { font-size: 7.5em;  }
-    @media (min-width: 768px) { font-size: 9em; padding-bottom: $big-logo-padding * 2; }
-    @media (min-width: 1200px) { font-size: 12em; }
-  }
-}
+    margin: 0;
+    padding: 0 0 15px 0; }
+    @media (min-width: 400px) {
+      .big-logo-row h1 {
+        font-size: 4.5em; } }
+    @media (min-width: 440px) {
+      .big-logo-row h1 {
+        font-size: 5.5em; } }
+    @media (min-width: 500px) {
+      .big-logo-row h1 {
+        font-size: 6.5em; } }
+    @media (min-width: 630px) {
+      .big-logo-row h1 {
+        font-size: 7.5em; } }
+    @media (min-width: 768px) {
+      .big-logo-row h1 {
+        font-size: 9em;
+        padding-bottom: 30px; } }
+    @media (min-width: 1200px) {
+      .big-logo-row h1 {
+        font-size: 12em; } }
