--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -16,6 +16,7 @@ body {
 
 .video-container {
     position: relative;
+    top: 260px;
     padding-bottom: 56.25%;
     padding-top: 30px; height: 0; overflow: hidden;
 }
@@ -26,8 +27,8 @@ body {
     position: absolute;
     top: 50px;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 80%;
+    height: 80%;
 }
 
 article,
