--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -14,23 +14,6 @@ body {
   margin: 0;
 }
 
-.video-container {
-    position: relative;
-    top: 260px;
-    padding-bottom: 56.25%;
-    padding-top: 30px; height: 0; overflow: hidden;
-}
- 
-.video-container iframe,
-.video-container object,
-.video-container embed {
-    position: absolute;
-    top: 50px;
-    left: 0;
-    width: 80%;
-    height: 80%;
-}
-
 article,
 aside,
 details,
@@ -1058,7 +1041,7 @@ h2,
 .h2,
 h3,
 .h3 {
-  margin-top: 20px;
+  text-align: center;
   margin-bottom: 10px;
 }
 h1 small,
