--- a/css/style.css
+++ b/css/style.css
@@ -36,3 +36,28 @@
   -o-transform: skew(0deg, -6deg);
   transform: skew(0deg, -6deg);
 }​
+
+.center {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  margin-top: -50px;
+  margin-left: -100px;
+}
+
+.video-container {
+    position: relative;
+    top: 260px;
+    padding-bottom: 56.25%;
+    padding-top: 30px; height: 0; overflow: hidden;
+}
+ 
+.video-container iframe,
+.video-container object,
+.video-container embed {
+    position: relative;
+    top: 50px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
