--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,6 @@
 }​
 
 .center {
-  position: fixed;
   top: 50%;
   left: 50%;
   margin-top: -50px;
@@ -47,7 +46,7 @@
 
 .video-container {
     position: relative;
-    top: 260px;
+    top: 260px; /* temp for fixing header */
     padding-bottom: 56.25%;
     padding-top: 30px; height: 0; overflow: hidden;
 }
@@ -56,7 +55,6 @@
 .video-container object,
 .video-container embed {
     position: relative;
-    top: 50px;
     left: 0;
     width: 100%;
     height: 100%;
