--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 #chevron {
+  z-index: 1;
   position: absolute;
   text-align: center;
-  padding: 12px;
+  padding: 18px;
   margin-bottom: 6px;
   height: 260px;
   width: 100%;
@@ -15,11 +16,11 @@
   height: 100%;
   width: 50%;
   background: gold;
-  -webkit-transform: skew(0deg, 6deg);
-  -moz-transform: skew(0deg, 6deg);
-  -ms-transform: skew(0deg, 6deg);
-  -o-transform: skew(0deg, 6deg);
-  transform: skew(0deg, 6deg);
+  -webkit-transform: skew(0deg, 8deg);
+  -moz-transform: skew(0deg, 8deg);
+  -ms-transform: skew(0deg, 8deg);
+  -o-transform: skew(0deg, 8deg);
+  transform: skew(0deg, 8deg);
 }
 
 #chevron:after {
@@ -30,19 +31,22 @@
   height: 100%;
   width: 50%;
   background: gold;
-  -webkit-transform: skew(0deg, -6deg);
-  -moz-transform: skew(0deg, -6deg);
-  -ms-transform: skew(0deg, -6deg);
-  -o-transform: skew(0deg, -6deg);
-  transform: skew(0deg, -6deg);
+  -webkit-transform: skew(0deg, -8deg);
+  -moz-transform: skew(0deg, -8deg);
+  -ms-transform: skew(0deg, -8deg);
+  -o-transform: skew(0deg, -8deg);
+  transform: skew(0deg, -8deg);
 }​
 
-.center {
-  top: 50%;
-  left: 50%;
-  margin-top: -50px;
-  margin-left: -100px;
-}
+.center {     
+    height: 30px; 
+    width: 639px;  
+    text-align: center;  
+    position: absolute;  
+    bottom: 0; 
+    left:50%; 
+    margin:0 0 0 -320px; /* left 50% PLUS margin top 0 right 0 bottom 0 left (halfwidth) makes sure it fits different screen*/
+    }
 
 .video-container {
     position: relative;
@@ -58,4 +62,17 @@
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+
+h1 {
+  z-index: 2;
+  position: absolute;
+  text-align: center;
+  font-family: 'Lobster Two', cursive;
+  font-family: inherit
+  font-weight: 500;
+  line-height: 1.1;
+  font-size: 100px;
+  padding-top: 30px;
 }
