--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+body {
+  background-image:url('binding_dark.png');
+  background-color: #000;
+}
+
 #chevron {
   z-index: 1;
   position: absolute;
