--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ body {
     position: absolute;  
     bottom: 0; 
     left:50%; 
-    margin:0 0 0 -320px; /* left 50% PLUS margin top 0 right 0 bottom 0 left (halfwidth) makes sure it fits different screen*/
+    margin:0 0 0 -320px;
     }
 
 .video-container {
