--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@ body {
   transform: skew(0deg, -8deg);
 }​
 
-.center {     
+/*.center {     
     height: 30px; 
     width: 639px;  
     text-align: center;  
@@ -95,7 +95,7 @@ body {
 
 .video-container {
     position: relative;
-    top: 280px; /* temp for fixing header */
+    top: 280px;  temp for fixing header 
     padding-bottom: 52.25%;
     padding-top: 40px; height: 0; overflow: hidden;
 }
@@ -107,7 +107,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-}
+}*/
 
 p {
   color: white;
