--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ footer {
 }
 
 #chevron {
-  position: absolute;
+
   text-align: center;
   padding: 18px;
   margin-bottom: 6px;
@@ -62,7 +62,7 @@ footer {
 
 #chevron:before {
   content: '';
-  position: absolute;
+
   top: 0;
   left: 0;
   height: 100%;
@@ -77,7 +77,7 @@ footer {
 
 #chevron:after {
   content: '';
-  position: absolute;
+
   top: 0;
   right: 0;
   height: 100%;
@@ -90,7 +90,7 @@ footer {
   transform: skew(0deg, -8deg);
 }​
 
-#chevron2 {
+/*#chevron2 {
   position: absolute;
   text-align: center;
   padding: 18px;
@@ -99,7 +99,7 @@ footer {
   width: 100%;
 }
 
-/*#chevron2:before {
+#chevron2:before {
   content: '';
   position: absolute;
   top: 0;
@@ -141,7 +141,6 @@ footer {
 
 .video-container {
     position: relative;
-    top: 280px; /* temp for fixing header */
     padding-bottom: 52.25%;
     padding-top: 40px; height: 0; overflow: hidden;
 }
@@ -169,4 +168,4 @@ h1 {
   line-height: 1.1;
   font-size: 100px;
   padding-top: 50px;
-}
+}*/
