--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ footer {
 }
 
 #chevron {
-
+  position: absolute;
   text-align: center;
   padding: 18px;
   margin-bottom: 6px;
@@ -62,7 +62,7 @@ footer {
 
 #chevron:before {
   content: '';
-
+  position: absolute;
   top: 0;
   left: 0;
   height: 100%;
@@ -77,7 +77,7 @@ footer {
 
 #chevron:after {
   content: '';
-
+  position: absolute;
   top: 0;
   right: 0;
   height: 100%;
@@ -90,8 +90,8 @@ footer {
   transform: skew(0deg, -8deg);
 }​
 
-/*#chevron2 {
-  position: absolute;
+#chevron2 {
+  position: relative;
   text-align: center;
   padding: 18px;
   margin-bottom: 6px;
@@ -101,7 +101,7 @@ footer {
 
 #chevron2:before {
   content: '';
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   height: 100%;
@@ -116,7 +116,7 @@ footer {
 
 #chevron2:after {
   content: '';
-  position: absolute;
+  position: relative;
   top: 0;
   right: 0;
   height: 100%;
@@ -127,20 +127,18 @@ footer {
   -ms-transform: skew(0deg, -8deg);
   -o-transform: skew(0deg, -8deg);
   transform: skew(0deg, -8deg);
-}​*/
+}​
 
 .center {     
     height: 30px; 
     width: 639px;  
     text-align: center;  
-    position: absolute;  
     bottom: 0; 
     left:50%; 
     margin:0 0 0 -320px;
     }
 
 .video-container {
-    position: relative;
     padding-bottom: 52.25%;
     padding-top: 40px; height: 0; overflow: hidden;
 }
@@ -148,7 +146,6 @@ footer {
 .video-container iframe,
 .video-container object,
 .video-container embed {
-    position: relative;
     left: 0;
     width: 100%;
     height: 100%;
