bg should load and people should be able to pause

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2827,7 +2827,7 @@
 
 			#header {
 				background-attachment: scroll,							scroll,							scroll;
-				background-image: url("images/top-1600.svg"), url("images/overlay.png"), url("../../images/grain.png");
+				background-image: url("images/top-1600.svg"), url("images/overlay.png"), url("../../images/grain.jpg");
 				background-size: 1600px 230px,					auto,							cover;
 				padding: 6em 0 12em 0;
 			}
@@ -2989,7 +2989,7 @@
 		/* Header */
 
 			#header {
-				background-image: url("images/top-1280.svg"), url("images/overlay.png"), url("../../images/grain.png");
+				background-image: url("images/top-1280.svg"), url("images/overlay.png"), url("../../images/grain.jpg");
 				background-size: 1280px 184px,						auto,							cover;
 				padding: 3em 0 7em 0;
 			}
