--- a/assets/sass/ie8.scss
+++ b/assets/sass/ie8.scss
@@ -86,7 +86,7 @@ $color-border-ie: #cccccc;
 /* Header */
 
 	#header {
-		background-image: url('../../images/grain.png') !important;
+		background-image: url('../../images/grain.jpg') !important;
 		background-size: cover !important;
 		background-position: scroll !important;
 		-ms-behavior: url('assets/js/ie/backgroundsize.min.htc');
