--- a/assets/css/ie8.css
+++ b/assets/css/ie8.css
@@ -78,7 +78,7 @@
 /* Header */
 
 	#header {
-		background-image: url("../../images/grain.png") !important;
+		background-image: url("../../images/grain.jpg") !important;
 		background-size: cover !important;
 		background-position: scroll !important;
 		-ms-behavior: url("assets/js/ie/backgroundsize.min.htc");
